# brainf

./: CMakeLists.txt
include/: brainf.hpp
src/: machine.cpp
test/: CMakeLists.txt  CMakeLists.txt~  tst_machine.cpp
